src/test/ui/associated-types/hr-associated-type-bound-param-5.stderr
error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:26:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the following implementations were found:
             <String as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:17:45
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ^^^^^ required by this bound in `X`

error[E0277]: the trait bound `str: Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-param-5.rs:31:14
   |
LL |     type U = str;
   |              ^^^ the trait `Clone` is not implemented for `str`
   |
   = help: the following implementations were found:
             <String as Clone>
note: required by a bound in `X`
  --> $DIR/hr-associated-type-bound-param-5.rs:17:45
   |
LL | trait X<'a, T: Cycle + for<'b> X<'b, T>>
   |       - required by a bound in this
...
LL |     for<'b> <T::Next as X<'b, T::Next>>::U: Clone,
   |                                             ^^^^^ required by this bound in `X`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
